--- a/deploy/vote/service.yaml
+++ b/deploy/vote/service.yaml
@@ -3,16 +3,17 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: redis
-  name: redis
+    app: vote
+  name: vote
 spec:
   ports:
-  - name: "6379"
-    port: 6379
+  - name: "80"
+    nodePort: 30000
+    port: 80
     protocol: TCP
-    targetPort: 6379
+    targetPort: 80
   selector:
-    app: redis
-  type: ClusterIP
+    app: vote
+  type: NodePort
 status:
   loadBalancer: {}
